fixed whitespace, changed logo

--- a/assets/css/skeleton.css
+++ b/assets/css/skeleton.css
@@ -36,7 +36,7 @@
 .container {
   position: relative;
   width: 100%;
-  min-height: 32vh;
+  min-height:0vh;
   max-width: 1600px;
   margin: 0 auto;
   padding: 0 15px;
